Fix large gap between the main image and the bottom thumbnails on product detail page.

--- a/public/scss/component/_product.scss
+++ b/public/scss/component/_product.scss
@@ -2377,11 +2377,11 @@
 .tf-product-media-wrap {
   &.thumbs-bottom {
     .thumbs-slider {
-      min-height: 500px;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: stretch;
+      gap: 10px;
     }
   }
 }
